--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     let chatBox = document.querySelector(".chat-window");
     let inputBox = document.querySelector(".chat-box");
 
-    const apiKey = "AIzaSyD7hyVG5RNQajBu_vsjIkPwy_t0BZTA9gQ"; // Keep this safe in real apps!
+    const apiKey = "AIzaSyD7hyVG5RNQajBu_vsjIkPwy_t0BZTA9gQ"; 
+    
+    // Keep this safe in real apps!
     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`;
 
     const replyFunc = (userMsg) => {
